// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart State should Add an emote to a chart 1`] = `
Array [
  Object {
    "emotes": Array [
      Object {
        "date": 2018-12-06T00:00:00.000Z,
        "emote": "HAPPY",
      },
    ],
    "name": 123,
  },
]
`;

exports[`Chart State should Add an emote to a chart 2`] = `
Array [
  Object {
    "emotes": Array [
      Object {
        "date": 2018-12-06T00:00:00.000Z,
        "emote": "SAD",
      },
    ],
    "name": 123,
  },
]
`;

exports[`Chart State should add multiple emotes to a chart 1`] = `
Array [
  Object {
    "emotes": Array [
      Object {
        "date": 2018-12-14T00:00:00.000Z,
        "emote": "HAPPY",
      },
      Object {
        "date": 2018-12-15T00:00:00.000Z,
        "emote": "SAD",
      },
      Object {
        "date": 2018-12-16T00:00:00.000Z,
        "emote": "HAPPY",
      },
    ],
    "name": 123,
  },
]
`;
